crates/perfgate-app/src/snapshots/perfgate_app__sensor__snapshot_tests__snapshot_pass_report.snap
---
source: crates/perfgate-app/src/sensor.rs
expression: sensor_report
---
{
  "schema": "sensor.report.v1",
  "tool": {
    "name": "perfgate",
    "version": "0.1.0"
  },
  "run": {
    "started_at": "2024-01-15T10:30:00Z",
    "ended_at": "2024-01-15T10:31:00Z",
    "duration_ms": 60000,
    "capabilities": {
      "baseline": {
        "status": "unavailable"
      }
    }
  },
  "verdict": {
    "status": "pass",
    "counts": {
      "info": 3,
      "warn": 0,
      "error": 0
    },
    "reasons": []
  },
  "findings": [],
  "data": {
    "summary": {
      "bench_count": 1,
      "fail_count": 0,
      "pass_count": 3,
      "total_count": 3,
      "warn_count": 0
    }
  }
}
